--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TatiDev | Portafolio</title>
-  <link rel="stylesheet" href="CSS/styles2.css" />
+  <link rel="stylesheet" href="CSS/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
@@ -134,6 +134,6 @@
     <p>© 2025 TatiDev. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="js/script2.js"></script>
+  <script src="JS/script.js"></script>
 </body>
 </html>
